--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -680,8 +680,53 @@ reported in case studies in the software engineering literature.
 % Client requirements affecting our choices
 % Learning new technology is part of the industry
 
-This software project was a valuable learning experience. 
-
+This software project was a valuable learning experience. Each and every one of
+ us learned new technologies, in addition to a much improved understanding
+ of what working in a team over a long period of time involves. These lessons
+ included: teamwork, organisation, time management and communication.
+ 
+One of the biggest issues we first faced was co-ordinating ourselves as a 
+ new team of strangers. By using icebreaker excercises to get to know 
+ one another, and discussing our strengths and weaknesses, we got to 
+ understand where each member of the team was comfortable working. There
+ were occasionally difficulties in getting everyone to meetings and ensuring
+ work was done on time, but by communicating well, we managed to share
+ meeting information and helping each other out on difficult issues.
+ 
+We also discovered that whilst the project's architecture is important, 
+ it is also important to remain focussed on the actual product. We 
+ spent a considerable amount of time at the start of the project setting 
+ up the VCS, branching strategy, Gitlab and CI configuration. Whilst these
+ were all valuable to the project, it would have been worth taking a step
+ back and asking "is this the best thing for the customer?". Finding a balance
+ is important.
+ 
+As GRN already uses certain technologies (such as Angular 2 and Firebase),
+ we were asked to also use them in order to ensure compatibility. GRN also
+ gave us feedback that differed from what we expected, resulting in us 
+ having to change our mindsets (particularly at the start of the year,
+ before the team developed a clear vision for it). This taught us that 
+ whilst you may want to do things in your own way, the client is ultimately
+ the decision-maker for many choices. By having regular contact with them
+ allowed us to get feedback quickly and reduced the risk of a feature that
+ would have to be completly scrapped.
+ 
+Many of of these technologies were new to the team (and to the industry), 
+ which meant that we had to learn them in a short period of time. This 
+ ate into development time, but was also necessary to fulfil the client's 
+ needs. Learning these new technologies was interesting and challenging,
+ but also came at the cost of time we could have spent on developing 
+ features, and resulted in bugs that would not have existed if a more 
+ familiar framework had been used. Ultimately, learning to use new, different
+ technologies is a fundamental part of being active in computer science,
+ and the ablity to aapt quickly to new ways of thinking will serve us well
+ should we choose to go into industry.
+ 
+The project gave us a chance to experience the world of software development
+ first hand. We learnt about pitfalls to avoid in the future, but also how 
+ to work well in a team and put our education into practice. This experience
+ will certainly be of great use to us in the future, from the technologies we
+ learnt, to the mistakes we made, to the late nights coding before client meetings.
 
 %==============================================================================
 \newpage
