--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -688,55 +688,92 @@ To maintain the close communication with our client, as dictated by
 At the very start of the project, we used a shared Google Docs folder
  to exchange initial ideas, such as user stories, wireframes, etc.
  Of course, when we started coding, some kind of version control
- repository had to be selected, and our choice landed on GitLab.
- The main attracting features of GitLab for us were the support for
- Git, which we were mostly familiar with at this point, and issue
+ repository had to be selected, and our choice was GitLab.
+ The most attractive features of GitLab for us were
+ Git, which we were mostly familiar with at this point, issue
  tracking, which enabled us to submit feature requests and bug reports
- with ease.
+ with ease and built-in continous integration.
 
-%TODO Expand a bit
 After we gathered the requirements for the project and defined the general
- development timeline, the issue tracker had to be filled in. GitLab allowed
- us to firstly create the sprints (with the possibility of assigning a deadline
- to each of them), and afterwards the feature requests could be assigned to a
+ development timeline, the issue tracker had to be filled in. This was done by 
+ the product owner mostly, but other team members were encouraged to report bugs and
+ propose features too. GitLab allowed
+ us to create the sprints (with the possibility of assigning a deadline
+ to each of them) in the form of milestones, and afterwards the feature 
+ requests could be assigned to a
  particular sprint. Additional attributes, such as assignee (the person
  responsible for resolving the issue), labels (feature, customer request,
  hotfix, non-essential, etc.), weight (1-10; decided during team meetings
- and retrospectives) could also be added, streamlining the development process.
+ and representing how long they would take in hours) could also be added.
+ 
+GitLab also allowed us to prioritise our tickets using a number of metrics - 
+ from the weight assigned to them to the labels. We gave \texttt{Botfix} tickets
+ the highest priority, as these represented bugs that existed on \texttt{master}. 
+ Following these tickets were \texttt{Bugfix} tickets, which were bugs found on 
+ \texttt{dev}. Then followed \texttt{Feature} and \texttt{Client Request} (
+ issues raised at client meetings but not specified in the requirements dicument). 
 
 For our branching model we selected one called Gitflow\cite{gitflow}. At
- its core, there are two main branches - dev and master. The master branch
+ its core, there are two main branches - dev and master. The \texttt{master} branch
  is the production-ready branch, and it reflects the state of the latest
- production release. Meanwhile, the dev branch reflects the state of our
+ production release. Meanwhile, the \texttt{dev} branch reflects the state of our
  latest development efforts. We usually merged the changes from dev into
  master once a week to ensure the fewest bugs possible, as most
  of the testing was done even before merging to the dev branch.
 
 \input{figures/changemgmt_merge_request}
 
-In the Gitflow model, dev by itself does not allow any commits. therefore
- all the development has to be done in separate branches, called feature
- branches. For each issue in the issue tracker, its assignee created a
- new branch, and went on coding in that branch. We encouraged every team
- member to commit often, as it let us follow the development process better;
- to add to that, the testing of every commit, powered by our continuous
- integration system (section \ref{sec:cicd}), enabled us to catch bugs
- early on. After the development of the feature was done, the assignee
+In the Gitflow model, dev and master are not comitted to. Therefore
+ all the development has to be done in separate feature branches. 
+ For each issue in the issue tracker, its assignee created a
+ new branch via GitLab, and started development in that branch. The 
+ branches were named according to this formula of:
+ 
+ \texttt{\$issueNumber - \$issueTitle}
+
+Another of the useful features provided by GitLab is the ability to 
+ provide templates for feature branches. This helped make sure that 
+ feature requests and bugfixes had sufficient information in them to
+ allow smooth development. For example, the feature template reminded
+ the creator to add user stories and functional requirements. The bugfix
+ template encouraged screenshots and steps for replicating the bug to be
+ included. This meant that the reporter was not necessarily the person who
+ resolved the ticket.
+ 
+We encouraged every team member to commit often, as it encouraged transparency
+ in the team by making work completed more visible. This policy also meant 
+ that linting and tests were run more regularly, preventing a large buildup
+ of tidying up work towards the end of the feature branch's lifetime.
+ By using our CI system to test every commit (section \ref{sec:cicd}) we could
+ catch bugs and linting issues early on, and fix them before they snowballed into
+ bigger, more confusing issues. After the development of the feature was done, the assignee
  submitted a merge request for the feature branch to be merged into dev.
- It first had to be approved by any other team member, after he performed a
+ 
+This merge request had to be approved by any other team member, following a
  code review. Code reviews allowed us to find mistakes in the source code not
  noticed by the developer, and therefore improve the quality of our project.
  If any mistakes were found, the reviewer could add some comments to the merge
- request, explaining what could be improved. Another thing which could
- prevent the merge request was merge conflicts. They occured if Git could not
+ request, explaining what could be improved. 
+ 
+Another blocker for merge request was merge conflicts. They occured if Git could not
  figure out on its own which lines of the source code to add, keep or
  remove, in case that files in dev and in feature branch differed
- greatly. It was on the assignee to resolve the merge conflicts. In
- the end, if CI tests passed, the merge requests were resolved, and
- the code reviews were performed, the merge request could be accepted.
- It resulted in the issue being closed, the new code being merged into
- the dev branch, and the feature branch being removed, so as not to
- clutter the repository with unnecessary files.
+ greatly. The asignee was responsible for this, as they would know the most about their
+ own code. This was also often in conjunction with the rest of the team, to ensure that the merge
+ would not result in unexpected behaviour. In some cases, the merge process did result
+ in breaking the build. This was quickly caught by the automated tests, and could
+ thus be promptly resolved. 
+ 
+Ultimately, for a branch to be merged into \texttt{dev}, it had to meet 3 criteria:
+\begin{itemize}
+\item[1] Passes tests and linting pipelines
+\item[2] There are no merge conflicts
+\item[3] The code passed a code review
+\end{itemize}
+On merge, the issue ticket was closed, the new code merged into \texttt{dev}
+ and the featue branch being deleted. This meant that the repository was not 
+ cluttered with old branches. With over 130 branches merged, this would have been
+ a considerable number of branches
 
 Encountering some issues with the workflow of GitLab was unavoidable.
  For example, if a feature branch was not being worked on for some time,
@@ -745,7 +782,7 @@ Encountering some issues with the workflow of GitLab was unavoidable.
  there was not much progress done on the feature branch - simply remove
  it and start over. Code reviews were not always performed carefully
  (or not at all, during crunch time), so problems were often encountered
- even on the dev branch. On the other hand, the issue tracker did not
+ even on \texttt{dev}. On the other hand, the issue tracker did not
  cause any major issues; its level of convenience and robustness helped
  us get on the issues quickly, submit bug reports when encountered,
  and generally stay on top of the things.
