--- a/Documentation/Dissertation/figures/changemgmt_merge_request.tex
+++ b/Documentation/Dissertation/figures/changemgmt_merge_request.tex
@@ -1,6 +1,6 @@
-\begin{figure}[h]
+\begin{figure}[H]
 \begin{center}
-\includegraphics[width=13cm]{figures/changemgmt_merge_request}
+\includegraphics[width=11cm]{figures/changemgmt_merge_request}
 \end{center}
 \caption{Example of an approved merge request}
 \label{fig:changemgmt_merge_request}
